# ms-documentacion-sysacad

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py
app/config/: config.py
app/mapping/: __init__.py  alumno_mapping.py  especialidad_mapping.py  tipodocumento_mapping.py
app/models/: alumno.py  especialidad.py  tipodocumento.py
app/resources/: __init__.py  certificado_resource.py
app/services/: __init__.py  alumno_service.py  cache_service.py  certificate_service.py  documentos_office_service.py
app/template/certificado/: certificado_pdf.html
docker/: .env-example  docker-compose.yml
test/: test_certificado.py  test_endpoints.py  test_mapping.py  test_services.py
test_carga/: informe.md  test_carga.txt
