[project]
name = "ms-documentacion-sysacad"
version = "1.0.0"
description = "Microservicion de documentacion de los alumnos del sysacad"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl==0.20.0",
    "flask==3.1.2",
    "marshmallow==4.0.1",
    "pyrefly==0.38.2",
    "python-dotenv==1.1.1",
    "python-odt-template==0.5.1",
    "requests==2.32.5",
    "weasyprint==65.1",
]
